cmake_minimum_required(VERSION 2.8)
project(leetcode)
set(CMAKE_CXX_STANDARD 11)
include_directories(${PROJECT_SOURCE_DIR}/include)
add_subdirectory(11-container-with-most-water)
add_subdirectory(12-integer-to-roman)
add_subdirectory(13-roman-to-integer)
add_subdirectory(14-longest-common-prefix)
add_subdirectory(15-3sum)
add_subdirectory(16-3sum-closet)
add_subdirectory(17-letter-combination-of-a-phone-number)
add_subdirectory(18-4Sum)
add_subdirectory(19-remove-nth-node-from-end-of-list)
add_subdirectory(20-valid-parentheses)
add_subdirectory(21-merge-two-sorted-lists)
add_subdirectory(22-generate-parentheses)
add_subdirectory(23-merge-k-sorted-lists)
add_subdirectory(24-swap-nodes-in-pairs)
add_subdirectory(25-reverse-node-in-k-group)
add_subdirectory(26-remove-duplicates-from-sorted-array)
add_subdirectory(27-remove-element)
add_subdirectory(28-implement-strstr)
add_subdirectory(29-divide-two-integers)
add_subdirectory(30-substring-with-concatenation-of-all-words)
add_subdirectory(31-next-permutation)
add_subdirectory(32-longest-valid-parentheses)
add_subdirectory(33-search-in-rotated-sorted-array)
add_subdirectory(34-find-first-and-last-position-of-element-in-sorted-array)
