cmake_minimum_required(VERSION 2.8)
project(leetcode)
set(CMAKE_CXX_STANDARD 11)
include_directories(${PROJECT_SOURCE_DIR}/include)
add_subdirectory(11-container-with-most-water)
add_subdirectory(12-integer-to-roman)
add_subdirectory(13-roman-to-integer)
add_subdirectory(14-longest-common-prefix)
add_subdirectory(15-3sum)
add_subdirectory(16-3sum-closet)
add_subdirectory(17-letter-combination-of-a-phone-number)
add_subdirectory(18-4Sum)
add_subdirectory(19-remove-nth-node-from-end-of-list)
add_subdirectory(20-valid-parentheses)
add_subdirectory(21-merge-two-sorted-lists)
add_subdirectory(22-generate-parentheses)
add_subdirectory(23-merge-k-sorted-lists)
add_subdirectory(24-swap-nodes-in-pairs)
add_subdirectory(25-reverse-node-in-k-group)
add_subdirectory(26-remove-duplicates-from-sorted-array)
add_subdirectory(27-remove-element)
add_subdirectory(28-implement-strstr)
add_subdirectory(29-divide-two-integers)
add_subdirectory(30-substring-with-concatenation-of-all-words)
add_subdirectory(31-next-permutation)
add_subdirectory(32-longest-valid-parentheses)
add_subdirectory(33-search-in-rotated-sorted-array)
add_subdirectory(34-find-first-and-last-position-of-element-in-sorted-array)
add_subdirectory(35-search-insert-position)
add_subdirectory(36-valid-sudoku)
add_subdirectory(37-sudoku-solver)
add_subdirectory(38-count-and-say)
add_subdirectory(39-combination-sum)
add_subdirectory(40-combination-sum-ii)
add_subdirectory(41-first-missing-positive)
add_subdirectory(42-trapping-rain-water)
add_subdirectory(43-multiply-strings)
add_subdirectory(44-wildcard-matching)
add_subdirectory(45-jump-game-ii)
add_subdirectory(46-permutations)
add_subdirectory(47-permutations-ii)
add_subdirectory(48-rotate-image)
add_subdirectory(49-group-anagrams)
add_subdirectory(50-powx-n)
add_subdirectory(51-n-queens)
add_subdirectory(52-n-queens-ii)
add_subdirectory(53-maximum-subarray)
add_subdirectory(54-spiral-matrix)
add_subdirectory(55-jump-game)
add_subdirectory(56-merge-intervals)
add_subdirectory(57-insert-interval)
add_subdirectory(58-length-of-last-word)
add_subdirectory(59-spiral-matrix-ii)
add_subdirectory(60-permutation-sequence)
add_subdirectory(61-rotate-list)
add_subdirectory(62-unique-paths)
add_subdirectory(63-unique-paths-ii)
add_subdirectory(64-minimum-path-sum)
add_subdirectory(65-valid-number)
add_subdirectory(66-plus-one)
add_subdirectory(67-add-binary)
add_subdirectory(68-text-justification)
add_subdirectory(69-sqrtx)
add_subdirectory(70-climbing-stairs)
add_subdirectory(71-simplify-path)
add_subdirectory(72-edit-distance)
add_subdirectory(73-set-matrix-zeroes)
add_subdirectory(74-search-a-2d-matrix)
add_subdirectory(75-sort-colors)
add_subdirectory(76-minimum-window-substring)
add_subdirectory(77-combinations)
add_subdirectory(78-subsets)
add_subdirectory(79-word-search)
add_subdirectory(80-remove-duplicates-from-sorted-array-ii)
add_subdirectory(81-search-in-rotated-sorted-array-ii)
add_subdirectory(82-remove-duplicates-from-sorted-list-ii)
add_subdirectory(83-remove-duplicates-from-sorted-list)
add_subdirectory(84-largest-rectangle-in-histogram)
add_subdirectory(85-maximal-rectangle)
add_subdirectory(86-partition-list)
add_subdirectory(87-scramble-string)
add_subdirectory(88-merge-sorted-array)
add_subdirectory(89-gray-code)
add_subdirectory(90-subsets-ii)
add_subdirectory(91-decode-ways)
add_subdirectory(92-reverse-linked-list-ii)
add_subdirectory(93-restore-ip-addresses)
add_subdirectory(94-binary-tree-inorder-traversal)
add_subdirectory(95-unique-binary-search-trees-ii)
add_subdirectory(96-unique-binary-search-trees)
add_subdirectory(97-interleaving-string)
add_subdirectory(98-validate-binary-search-tree)
add_subdirectory(99-recover-binary-search-tree)
add_subdirectory(100-same-tree)
add_subdirectory(101-symmetric-tree)
add_subdirectory(102-binary-tree-level-order-traversal)
add_subdirectory(103-binary-tree-zigzag-level-order-traversal)
add_subdirectory(104-maximum-depth-of-binary-tree)
add_subdirectory(105-construct-binary-tree-from-preorder-and-inorder-traversal)
add_subdirectory(106-construct-binary-tree-from-inorder-and-postorder-traversal)
add_subdirectory(107-binary-tree-level-order-traversal-ii)
add_subdirectory(108-convert-sorted-array-to-binary-search-tree)
add_subdirectory(109-convert-sorted-list-to-binary-search-tree)
add_subdirectory(110-balanced-binary-tree)
add_subdirectory(111-minimum-depth-of-binary-tree)
add_subdirectory(112-path-sum)
add_subdirectory(113-path-sum-ii)
add_subdirectory(114-flatten-binary-tree-to-linked-list)
add_subdirectory(118-pascals-triangle)
add_subdirectory(119-pascals-triangle-ii)
